WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93579
Fix null pointer deref in RenderFileUploadControl::computePreferredLogicalWidth().
https://bugs.webkit.org/show_bug.cgi?id=93579
Summary
Fix null pointer deref in RenderFileUploadControl::computePreferredLogicalWid...
Luke Macpherson
Reported
2012-08-08 22:53:39 PDT
Fix null pointer deref in RenderFileUploadControl::computePreferredLogicalWidth().
Attachments
Patch
(3.66 KB, patch)
2012-08-08 22:56 PDT
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.77 KB, patch)
2012-08-09 17:52 PDT
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.81 KB, patch)
2012-08-09 18:28 PDT
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Luke Macpherson
Comment 1
2012-08-08 22:56:05 PDT
Created
attachment 157390
[details]
Patch
Kent Tamura
Comment 2
2012-08-08 23:40:58 PDT
Comment on
attachment 157390
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=157390&action=review
> Source/WebCore/ChangeLog:10 > + Test: fast/css/upload-control-crash.html
I think this is not in the CSS area. It should be fast/forms/file/file-crash-by-display-none-button.html or something.
Luke Macpherson
Comment 3
2012-08-09 17:52:21 PDT
Created
attachment 157596
[details]
Patch for landing
Kent Tamura
Comment 4
2012-08-09 17:53:20 PDT
Comment on
attachment 157596
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=157596&action=review
> Source/WebCore/ChangeLog:10 > + Test: fast/forms/file-crash-by-display-none-button.html
Please put it to fast/forms/file/, not fast/forms/.
Luke Macpherson
Comment 5
2012-08-09 18:28:57 PDT
Created
attachment 157605
[details]
Patch for landing
WebKit Review Bot
Comment 6
2012-08-09 20:37:20 PDT
Comment on
attachment 157605
[details]
Patch for landing Clearing flags on attachment: 157605 Committed
r125243
: <
http://trac.webkit.org/changeset/125243
>
WebKit Review Bot
Comment 7
2012-08-09 20:37:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug