Fix null pointer deref in RenderFileUploadControl::computePreferredLogicalWidth(). https://bugs.webkit.org/show_bug.cgi?id=93579

Reviewed by Kent Tamura.

Source/WebCore:

Checks the upload control has a non-null button renderer before dereferencing.

Test: fast/forms/file/file-crash-by-display-none-button.html

* rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::computePreferredLogicalWidths):

LayoutTests:

Exercise code path that causes an upload button to exist without a renderer.

* fast/forms/file/file-crash-by-display-none-button.html: Added.
* fast/forms/file/file-crash-by-display-none-button-expected.txt: Added.


Canonical link: https://commits.webkit.org/111530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125243 268f45cc-cd09-0410-ab3c-d52691b4dbfc